<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/idLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/label_id" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/nameLabelTextView"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_name"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/courseCodeLabelTextView"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_course_code"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/courseCodeTextView"
            android:layout_column="1"
            android:layout_row="2"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/startLabelTextView"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_start_at"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/startTextView"
            android:layout_column="1"
            android:layout_row="3"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/endLabelTextView"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/label_end_at"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/endTextView"
            android:layout_column="1"
            android:layout_row="4"
            style="@style/ContactTextView" />
    </GridLayout>

</ScrollView>
